# QT-Recorder

./: README.md
recorder-opencv/: CMakeLists.txt  app.rc  camera.cpp  camera.hpp  form.cpp  form.h  form.ui  uiComponents.qrc  widget.cpp  widget.h  widget.ui
test/: time.cpp
